<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37CB4EE6">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/button_background1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="275dp"
                    android:layout_height="275dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/imagePreview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@drawable/ic_image"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/todo" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnCapture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/button_background"
                    android:text="@string/ambil_foto"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deskripsi"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                android:textStyle="bold"
                android:background="@drawable/button_background1"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_date"
                    app:tint="#FFFFFF"
                    android:contentDescription="@string/todo"
                    android:background="@drawable/button_background"/>

                <TextView
                    android:id="@+id/tvDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageDate"
                    android:text="@string/tanggal_ambil_gambar"
                    android:textColor="#9F3737"
                    android:textSize="14sp"
                    android:background="@drawable/bg_rounded_rect"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_image1"
                    app:tint="#FFFFFF"
                    android:contentDescription="@string/todo"
                    android:background="@drawable/button_background"/>

                <TextView
                    android:id="@+id/tvImageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageName"
                    android:text="@string/lokasi_simpan_gambar"
                    android:textColor="#9F3737"
                    android:textSize="14sp"
                    android:background="@drawable/bg_rounded_rect"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_location"
                    app:tint="#FFFFFF"
                    android:contentDescription="@string/todo"
                    android:background="@drawable/button_background"/>

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageLocation"
                    android:text="@string/lokasi_anda"
                    android:textColor="#9F3737"
                    android:textSize="14sp"
                    android:background="@drawable/bg_rounded_rect"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_phone"
                    app:tint="#FFFFFF"
                    android:contentDescription="@string/todo"
                    android:background="@drawable/button_background"/>

                <TextView
                    android:id="@+id/tvDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageDevice"
                    android:text="@string/hp_anda"
                    android:textColor="#9F3737"
                    android:textSize="14sp"
                    android:background="@drawable/bg_rounded_rect"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>